--- a/app/src/main/res/layout/activity_doctor_detail.xml
+++ b/app/src/main/res/layout/activity_doctor_detail.xml
@@ -130,7 +130,7 @@
         <GridView
             android:id="@+id/gvTimeSlots"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="225dp"
             android:numColumns="3"
             android:verticalSpacing="8dp"
             android:horizontalSpacing="8dp"
