--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -89,22 +89,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp" />
 
-    <!-- Age Input -->
-    <EditText
-        android:id="@+id/edtAge"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Age"
-        android:padding="12dp"
-        android:background="@drawable/edittext_background"
-        android:inputType="number"
-        app:layout_constraintTop_toBottomOf="@id/edtPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp" />
-
     <!-- Date of Birth Input -->
     <EditText
         android:id="@+id/edtDob"
@@ -113,8 +97,10 @@
         android:hint="Date of Birth (YYYY-MM-DD)"
         android:padding="12dp"
         android:background="@drawable/edittext_background"
-        android:inputType="date"
-        app:layout_constraintTop_toBottomOf="@id/edtAge"
+        android:focusable="false"
+        android:clickable="true"
+        android:inputType="none"
+        app:layout_constraintTop_toBottomOf="@id/edtPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="12dp"
