--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,8 @@
         <!-- White status bar -->
         <item name="android:statusBarColor">@android:color/white</item>
         <item name="android:windowLightStatusBar">true</item>
+        
+        <!-- App Font -->
+        <item name="android:fontFamily">@font/app_font</item>
     </style>
 </resources>
