--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -91,23 +91,14 @@
     </LinearLayout>
 
     <!-- Banner Section -->
-    <FrameLayout
-        android:id="@+id/bannerSection"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/bannerViewPager"
         android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:background="@drawable/rounded_banner_bg"
+        android:layout_height="180dp"
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/searchLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="In this I will run the adds Banners"
-            android:textColor="#000000"/>
-    </FrameLayout>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Health & Lifestyle Section -->
     <TextView
@@ -120,7 +111,7 @@
         android:textColor="#000000"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/bannerSection"
+        app:layout_constraintTop_toBottomOf="@id/bannerViewPager"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <LinearLayout
